Fix bg image not showing
bg image was not showing up, if the page was not in the root path. + removed some unused files.

--- a/assets/theme/css/style.css
+++ b/assets/theme/css/style.css
@@ -262,7 +262,8 @@ nav .mbr-section-btn {
   min-height: 100vh;
   padding-top: 3rem;
   padding-bottom: 3rem; 
-  background-image: url(/assets/images/bg-img.jpg);}
+  background-image: url(bg-img.jpg);
+}
 
 /*! small screen sizes  */
 @media (max-width: 991px) {
